--- a/index.html
+++ b/index.html
@@ -1,1 +1,35 @@
-Website under development
+<h1>Him village ePrahari</h1>
+
+<h2 style="color:red;">Website under development</h2>
+
+Him: Symbolizes the Himalayas, a vital ecosystem and the lifeline for millions.
+
+Village: Indicates your focus on rural areas where waste management challenges are particularly acute.
+
+e: Represents the environment, which is at the core of your organization's efforts.
+
+Prahari: Means guardian or protector, emphasizing your commitment to safeguarding the environment.
+
+More describe organisation domen 
+
+To save the environment
+0) Waste management, ( plastic waste, solid waste, E - waste ,
+1)Climate change 
+2)rag pickers new generation Educated 
+3) Environment volunteer Employment ( earning models) 
+4)Zero waste Village 
+5) working on the ganga  ( river)  save
+6)  cleanliness drive Himalaya 
+7)Working waste management models , 
+  improve the standard of education
+To provide basic need for education, like fellowship, fees , beg , book not book .
+
+Educate slums children 
+working on school children
+Career counseling for children
+Creative learning models children 
+Vacational learning model
+Vocational learning model
+<br><br>
+
+
