--- a/index.html
+++ b/index.html
@@ -1,35 +1,39 @@
-<h1>Him village ePrahari</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>HimVillageePrahari</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+  <section class="top">
+    <header>
+        <div class="container">
+            <div class=" logo-section">
+              <div class="logo">
+                <img src="HIM VILLAGE E.png" alt="HimVillageePrahari Logo">
+                <p>HimVillageePrahari</p>
+              </div>
+            </div>
+            <nav>
+                <ul class="nav-links">
+                    <li><a href="#home">Home</a></li>
+                    <li><a href="#about">About</a></li>
+                    <li><a href="#gallery">Gallery</a></li>
+                    <li><a href="#volunteers">Volunteers</a></li>
+                    <li><a href="#contact">Contact Us</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
 
-<h2 style="color:red;">Website under development</h2>
+    <section class="main-body">
+      <h1>Him Village E-Prahari</h1>
+    </section>
 
-Him: Symbolizes the Himalayas, a vital ecosystem and the lifeline for millions.
-
-Village: Indicates your focus on rural areas where waste management challenges are particularly acute.
-
-e: Represents the environment, which is at the core of your organization's efforts.
-
-Prahari: Means guardian or protector, emphasizing your commitment to safeguarding the environment.
-
-More describe organisation domen 
-
-To save the environment
-0) Waste management, ( plastic waste, solid waste, E - waste ,
-1)Climate change 
-2)rag pickers new generation Educated 
-3) Environment volunteer Employment ( earning models) 
-4)Zero waste Village 
-5) working on the ganga  ( river)  save
-6)  cleanliness drive Himalaya 
-7)Working waste management models , 
-  improve the standard of education
-To provide basic need for education, like fellowship, fees , beg , book not book .
-
-Educate slums children 
-working on school children
-Career counseling for children
-Creative learning models children 
-Vacational learning model
-Vocational learning model
-<br><br>
+    </section>
 
 
+</body>
+</html>
