--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
               <div class="logo">
                 <img src="HIM VILLAGE E.png" alt="HimVillageePrahari Logo">
                 <p>HimVillageePrahari</p>
+                <p>
               </div>
             </div>
             <nav>
@@ -30,9 +31,14 @@
 
     <section class="main-body">
       <h1>Him Village E-Prahari</h1>
+      <p> You can guard, so let's protect together <p>
     </section>
 
-    </section>
+  </section>
+
+  <section class="section2">
+    <h2> Section 2</h2>
+  </section>
 
 
 </body>
