--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HimVillageePrahari</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 </head>
 <body>
   <section class="top">
@@ -31,15 +32,83 @@
 
     <section class="main-body">
       <h1>Him Village E-Prahari</h1>
-      <p> You can guard, so let's protect together <p>
+      <p class="main-body-p"> You can guard, so let's protect together <p>
+      <br><br><br>
+      <p class="main-body-des" >We are dedicated to preserving the natural beauty and ecological balance of the Himalayas by empowering rural communities. Through education, waste management, and sustainable practices, we stand as guardians of our environment. Join us in our mission to protect, nurture, and sustain the villages and forests of Himachal for future generations.</p>
+
+      <button class="main-body-btn">About Us</button>
     </section>
 
   </section>
 
   <section class="section2">
-    <h2> Section 2</h2>
+    <div class="cards"> 
+      <div class="card1">
+        <div class="card1-img"><img src="donation.jpg"></div>
+        <div class="txt-card1">
+          <h6>Donation</h6>
+            <p>Your gift today protects nature and empowers communities.</p>
+            <button class="card-btn">Donate Now</button>
+        </div>
+      </div>
+
+      <div class="card2">
+        <div class="card1-img"><img src="fundraising.jpg"></div>
+        <div class="txt-card1">
+          <h6>Fundraising</h6>
+            <p>Help us preserve the Himalayas—every effort counts!</p>
+            <button class="card-btn">Donate Now</button>
+        </div>
+      </div>
+    </div>
   </section>
 
+  <section class="section3">
+  <h2>Our Mission</h2>
+  <div class="sec3txt-img">
+    <div>
+      <p>Our mission is to protect the natural beauty and ecological balance of the Himalayas by empowering rural communities. We stand as guardians of our environment through education, waste management, and sustainable practices. Join us in our mission to protect, nurture, and sustain the villages and forests of Himachal for future generations.Our mission is to protect the natural beauty and ecological balance of the Himalayas by empowering rural communities. We stand as guardians of our environment through education, waste management, and sustainable practices. Join us in our mission to protect, nurture, and sustain the villages and forests of Himachal for future generations.</p>
+      <br>
+      <p>Our mission is to protect the natural beauty and ecological balance of the Himalayas by empowering rural communities. We stand as guardians of our environment through education, waste management, and sustainable practices. Join us in our mission to protect, nurture, and sustain the villages and forests of Himachal for future generations.</p>
+    </div>
+    <div class="sec3img">
+      <img src="Unisex Woolen Kullu Himachali Cap D6.jpg">
+    </div>
+  </div>
+  </section>
+
+  <section class="section4">
+    <div class="statistics">
+        <div class="stat">
+          <span class="material-symbols-outlined">
+          pets
+          </span>            
+          <h2>1200</h2>
+            <p>Donation</p>
+        </div>
+        <div class="stat">
+            <span class="material-symbols-outlined">
+            sentiment_satisfied
+            </span>
+            <h2>2000</h2>
+            <p>Volunteers</p>
+        </div>
+        <div class="stat">
+            <span class="material-symbols-outlined">
+            eco
+            </span>
+            <h2>4000</h2>
+            <p>Rescued</p>
+        </div>
+        <div class="stat">
+          <span class="material-symbols-outlined">
+          public
+          </span>
+            <h2>30+</h2>
+            <p>Countries</p>
+        </div>
+    </div>
+  </section>
 
 </body>
 </html>
