--- a/index.html
+++ b/index.html
@@ -64,17 +64,17 @@
   </section>
 
   <section class="section3">
-  <h2>Our Mission</h2>
-  <div class="sec3txt-img">
-    <div>
-      <p>Our mission is to protect the natural beauty and ecological balance of the Himalayas by empowering rural communities. We stand as guardians of our environment through education, waste management, and sustainable practices. Join us in our mission to protect, nurture, and sustain the villages and forests of Himachal for future generations.Our mission is to protect the natural beauty and ecological balance of the Himalayas by empowering rural communities. We stand as guardians of our environment through education, waste management, and sustainable practices. Join us in our mission to protect, nurture, and sustain the villages and forests of Himachal for future generations.</p>
-      <br>
-      <p>Our mission is to protect the natural beauty and ecological balance of the Himalayas by empowering rural communities. We stand as guardians of our environment through education, waste management, and sustainable practices. Join us in our mission to protect, nurture, and sustain the villages and forests of Himachal for future generations.</p>
-    </div>
-    <div class="sec3img">
-      <img src="Unisex Woolen Kullu Himachali Cap D6.jpg">
-    </div>
-  </div>
+      <h2>Our Mission</h2>
+      <div class="sec3txt-img">
+          <div class="sec3text">
+              <p>At Him Village ePrahari, our mission is deeply rooted in the preservation of the Himalayas, an irreplaceable ecosystem that sustains countless lives. We are dedicated to protecting this vital environment by addressing the pressing challenges of waste management, climate change, and environmental degradation. Our initiatives focus on creating zero-waste villages, implementing effective waste management models, and promoting sustainable practices that can be adopted by communities throughout the region. We believe that every village and individual has the potential to be a guardian of the environment, and our mission is to empower them to take action. Through education, we aim to instill a sense of responsibility in the next generation, ensuring that they are equipped with the knowledge and resources needed to protect their surroundings.</p>
+              <br>
+              <p>Beyond environmental protection, our mission extends to the empowerment of local communities, particularly those in rural areas where resources are scarce. We strive to improve the standard of education, provide essential learning tools, and offer career counseling to children, helping them build a brighter future. Our efforts also include supporting rag pickers' families by providing educational opportunities and developing earning models for environmental volunteers. By fostering a sense of stewardship and community-driven change, Him Village ePrahari is committed to creating a sustainable and resilient future for the Himalayas and its people. Together, we can safeguard the natural beauty and cultural heritage of this region, ensuring that it remains a lifeline for generations to come.</p>
+          </div>
+          <div class="sec3img">
+              <img src="cap.jpg" alt="Himachali Cap Image">
+          </div>
+      </div>
   </section>
 
   <section class="section4">
@@ -108,6 +108,11 @@
             <p>Countries</p>
         </div>
     </div>
+  </section>
+
+  <section class="section5">
+    <h2> Our Services</h2>
+    
   </section>
 
 </body>
