--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       <h1>Him Village E-Prahari</h1>
       <p class="main-body-p"> You can guard, so let's protect together <p>
       <br><br><br>
-      <p class="main-body-des" >We are dedicated to preserving the natural beauty and ecological balance of the Himalayas by empowering rural communities. Through education, waste management, and sustainable practices, we stand as guardians of our environment. Join us in our mission to protect, nurture, and sustain the villages and forests of Himachal for future generations.</p>
+      <p class="main-body-des" >We are dedicated to preserving the natural beauty and ecological balance of the Himalayas: Himachal, and Uttarakhand by empowering rural communities. Through education, waste management, and sustainable practices, we stand as guardians of our environment. Join us in our mission to protect, nurture, and sustain the villages and forests of these regions for future generations.</p>
 
       <button class="main-body-btn">About Us</button>
     </section>
@@ -112,7 +112,39 @@
 
   <section class="section5">
     <h2> Our Services</h2>
-    
+    <P>Our services are designed to address the pressing environmental and social challenges facing the Himalayas. From waste management to education, we are committed to creating a sustainable future for the region and its people.</P>
+
+
+    <section class="unique-section">
+        <!-- First Row: Rectangular card on the left, square cards on the right -->
+        <div class="unique-card-container">
+            <div class="unique-rect-card" style="background-image: url('1.jpg');"><div class="cardtxt-sq"><h3>Make a Donation</h3><p>Support our initiatives with a donation to help protect the Himalayas and uplift local communities.</p></div></div>
+            <div class="unique-square-cards">
+                <div class="unique-square-card" style="background-image: url('2.jpg');"><div class="cardtxt-rec"><h3>Become a Volunteer</h3><p>Join us in making a tangible impact through on-ground activities and educational outreach.</p></div></div>
+                <div class="unique-square-card" style="background-image: url('3.jpg');"><div class="cardtxt-rec"><h3>Sponsor a Child</h3><p>Give a child the opportunity for a better future by providing access to quality education.</p></div></div>
+            </div>
+            <div class="unique-square-cards">
+                <div class="unique-square-card" style="background-image: url('4.jpg');"><div class="cardtxt-rec"><h3>Human Right Advocacy</h3><p>We advocate for the rights and dignity of Himalayan communities, ensuring fair treatment and access to essential services.</p></div></div>
+                <div class="unique-square-card" style="background-image: url('5.jpg');"><div class="cardtxt-rec"><h3>Environmental Education</h3><p>Raise awareness and educate communities on sustainable practices to protect the environment.</p></div></div>
+            </div>
+        </div>
+
+        <!-- Second Row: Rectangular card on the right, square cards on the left -->
+        <div class="unique-card-container">
+            <div class="unique-square-cards">
+                <div class="unique-square-card" style="background-image: url('6.jpg');"><div class="cardtxt-rec"><h3>Community Development</h3><p>Collaborate with us to improve infrastructure, access to clean water, and promote sustainable living.</p></div></div>
+                <div class="unique-square-card" style="background-image: url('7.jpg');"><div class="cardtxt-rec"><h3>Cleanliness Drive</h3><p>Participate in our efforts to keep the Himalayas pristine through regular waste collection and segregation.</p></div></div>
+            </div>
+            <div class="unique-square-cards">
+                <div class="unique-square-card" style="background-image: url('8.jpg');"><div class="cardtxt-rec"><h3>Waste Management Solutions</h3><p>We offer tailored waste management solutions to create zero-waste villages.</p></div></div>
+                <div class="unique-square-card" style="background-image: url('9.jpg');"><div class="cardtxt-rec"><h3>Climate Change Mitigations</h3><p>Help us combat climate change through reforestation, renewable energy, and community education.</p></div></div>
+            </div>
+            <div class="unique-rect-card" style="background-image: url('10.jpg');"><div class="cardtxt-sq"><h3>Emergency Relief</h3><p>Provide immediate aid to communities affected by natural disasters in the Himalayas.</p></div></div>
+        </div>
+    </section>
+
+
+
   </section>
 
 </body>
