--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                 <div class="unique-square-card" style="background-image: url('3.jpg');"><div class="cardtxt-rec"><h3>Sponsor a Child</h3><p>Give a child the opportunity for a better future by providing access to quality education.</p></div></div>
             </div>
             <div class="unique-square-cards">
-                <div class="unique-square-card" style="background-image: url('4.jpg');"><div class="cardtxt-rec"><h3>Human Right Advocacy</h3><p>We advocate for the rights and dignity of Himalayan communities, ensuring fair treatment and access to essential services.</p></div></div>
+                <div class="unique-square-card" style="background-image: url('4.jpg');"><div class="cardtxt-rec"><h3>Human Right Advocacy</h3><p>We advocate for the rights and dignity of Himalayan communities.</p></div></div>
                 <div class="unique-square-card" style="background-image: url('5.jpg');"><div class="cardtxt-rec"><h3>Environmental Education</h3><p>Raise awareness and educate communities on sustainable practices to protect the environment.</p></div></div>
             </div>
         </div>
