--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <title>HimVillageePrahari</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+
+      <!-- FontAwesome CDN -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
   <section class="top">
@@ -118,7 +121,7 @@
     <section class="unique-section">
         <!-- First Row: Rectangular card on the left, square cards on the right -->
         <div class="unique-card-container">
-            <div class="unique-rect-card" style="background-image: url('1.jpg');"><div class="cardtxt-sq"><h3>Make a Donation</h3><p>Support our initiatives with a donation to help protect the Himalayas and uplift local communities.</p></div></div>
+            <div class="unique-rect-card" style="background-image: url('12.jpg');"><div class="cardtxt-sq"><h3>Make a Donation</h3><p>Support our initiatives with a donation to help protect the Himalayas and uplift local communities.</p></div></div>
             <div class="unique-square-cards">
                 <div class="unique-square-card" style="background-image: url('2.jpg');"><div class="cardtxt-rec"><h3>Become a Volunteer</h3><p>Join us in making a tangible impact through on-ground activities and educational outreach.</p></div></div>
                 <div class="unique-square-card" style="background-image: url('3.jpg');"><div class="cardtxt-rec"><h3>Sponsor a Child</h3><p>Give a child the opportunity for a better future by providing access to quality education.</p></div></div>
@@ -146,6 +149,72 @@
 
 
   </section>
+
+  <section class="section6">
+      <video autoplay muted loop playsinline class="background-video">
+        <source src="9375bc4d522db58a597976deb5527b1a.mp4" type="video/mp4">
+        Your browser does not support the video tag.
+    </video>
+    <div class="content">
+      <h2> Our Mentors</h2>
+      <P>Our mentors are the guiding force behind our initiatives, providing invaluable expertise and support to help us achieve our mission of protecting the Himalayas and empowering local communities.</P>
+      <div class="mentor-cards">
+        <div class="mentors">
+          <div class="mentor-img"><img src="gautam.jpeg"></div>
+          <div class="mentor-txt">
+            <h6>Mr. Gautam Khattar</h6>
+            <p>Mr. Gautam Khattar is a renowned social media influencer and the Founder of Stantan Mahasang. He inspires and motivates people through his unique storytelling and impactful content. His organization focuses on raising awareness about religious literature and spiritual growth, making him a significant figure in societal and spiritual enlightenment.</p>
+          </div>
+          <div class="mentor-social">
+            <a href="#" class="facebook"><i class="fab fa-facebook"></i></a>
+            <a href="#" class="twitter"><i class="fab fa-twitter"></i></a>
+            <a href="https://www.instagram.com/khattar.gautam?igsh=Z2t0ODdqdWRoYXU0" class="instagram" target="_blank"><i class="fab fa-instagram"></i></a>   
+            <a href="#" class="linkedin"><i class="fab fa-linkedin"></i></a>   
+          </div>
+        </div>
+        <div class="mentors">
+          <div class="mentor-img"><img src="Padmabati.jpeg"></div>
+          <div class="mentor-txt">
+            <h6>Ms Padmabati Narzary</h6>
+            <p>Social Work Graduate and Livelihood Advocate. A member of the Bodo Tribe from Bijni, Chirang District, Assam, I hold a post-graduation in Social Work with a focus on Livelihood and Social Entrepreneurship, TISS-Guwahati. Contributing to livelihood, health, and nutrition initiatives in the Indo-Bhutan Border region, I am passionate about sustainable social business and continuous learning for a positive impact in the social sector.</p>
+          </div>
+          <div class="mentor-social">
+            <a href="#" class="facebook"><i class="fab fa-facebook"></i></a>
+            <a href="#" class="twitter"><i class="fab fa-twitter"></i></a>
+            <a href="#" class="instagram"><i class="fab fa-instagram"></i></a>   
+            <a href="https://www.linkedin.com/in/padmabati-narzary-268728192" class="linkedin" target="_blank"><i class="fab fa-linkedin"></i></a>   
+          </div>
+        </div>
+        <div class="mentors">
+          <div class="mentor-img"><img src="moni.jpeg"></div>
+          <div class="mentor-txt">
+            <h6>Miss Moni kumari</h6>
+            <p>Agronomist from Bihar working for Sustainable projects in Uttrakhand, with education background in Agriculture. A dedicated and versatile professional with over 3 years of experience in the agriculture and rural development sector. Proficient in project management, field research, community engagement, and technical interventions in agriculture. Skilled in leading initiatives aimed at improving farming practices and enhancing livelihoods. Demonstrates a strong commitment to sustainable development, education, and grassroots leadership.</p>
+          </div>
+          <div class="mentor-social">
+            <a href="#" class="facebook"><i class="fab fa-facebook"></i></a>
+            <a href="#" class="twitter"><i class="fab fa-twitter"></i></a>
+            <a href="#" class="instagram"><i class="fab fa-instagram"></i></a>   
+            <a href="https://www.linkedin.com/in/moni-kumari174" class="linkedin" target="_blank"><i class="fab fa-linkedin"></i></a>   
+          </div>
+        </div>
+        <div class="mentors">
+          <div class="mentor-img"><img src="mentor1.jpg"></div>
+          <div class="mentor-txt">
+            <h6>Mr. Gautam Khattar</h6>
+            <p>Mr. Gautam Khattar is a renowned social media influencer and the Founder of Stantan Mahasang. He inspires and motivates people through his unique storytelling and impactful content. His organization focuses on raising awareness about religious literature and spiritual growth, making him a significant figure in societal and spiritual enlightenment.</p>
+          </div>
+          <div class="mentor-social">
+            <a href="#" class="facebook"><i class="fab fa-facebook"></i></a>
+            <a href="#" class="twitter"><i class="fab fa-twitter"></i></a>
+            <a href="#" class="instagram"><i class="fab fa-instagram"></i></a>   
+            <a href="#" class="linkedin"><i class="fab fa-linkedin"></i></a>   
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
 
 </body>
 </html>
