--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
   <section class="section2">
     <div class="cards"> 
       <div class="card1">
-        <div class="card1-img"><img src="donation.jpg"></div>
+        <div class="card1-img"><img loading="lazy" src="donation.jpg"></div>
         <div class="txt-card1">
           <h6>Donation</h6>
             <p>Your gift today protects nature and empowers communities.</p>
@@ -56,7 +56,7 @@
       </div>
 
       <div class="card2">
-        <div class="card1-img"><img src="fundraising.jpg"></div>
+        <div class="card1-img"><img loading="lazy" src="fundraising.jpg"></div>
         <div class="txt-card1">
           <h6>Fundraising</h6>
             <p>Help us preserve the Himalayas—every effort counts!</p>
@@ -75,7 +75,7 @@
               <p>Beyond environmental protection, our mission extends to the empowerment of local communities, particularly those in rural areas where resources are scarce. We strive to improve the standard of education, provide essential learning tools, and offer career counseling to children, helping them build a brighter future. Our efforts also include supporting rag pickers' families by providing educational opportunities and developing earning models for environmental volunteers. By fostering a sense of stewardship and community-driven change, Him Village ePrahari is committed to creating a sustainable and resilient future for the Himalayas and its people. Together, we can safeguard the natural beauty and cultural heritage of this region, ensuring that it remains a lifeline for generations to come.</p>
           </div>
           <div class="sec3img">
-              <img src="cap.jpg" alt="Himachali Cap Image">
+              <img loading="lazy" src="cap.jpg" alt="Himachali Cap Image">
           </div>
       </div>
   </section>
@@ -160,7 +160,7 @@
       <P>Our mentors are the guiding force behind our initiatives, providing invaluable expertise and support to help us achieve our mission of protecting the Himalayas and empowering local communities.</P>
       <div class="mentor-cards">
         <div class="mentors">
-          <div class="mentor-img"><img src="gautam.jpeg"></div>
+          <div class="mentor-img"><img loading="lazy" src="gautam.jpeg"></div>
           <div class="mentor-txt">
             <h6>Mr. Gautam Khattar</h6>
             <p>Mr. Gautam Khattar is a renowned social media influencer and the Founder of Stantan Mahasang. He inspires and motivates people through his unique storytelling and impactful content. His organization focuses on raising awareness about religious literature and spiritual growth, making him a significant figure in societal and spiritual enlightenment.</p>
@@ -173,7 +173,7 @@
           </div>
         </div>
         <div class="mentors">
-          <div class="mentor-img"><img src="Padmabati.jpeg"></div>
+          <div class="mentor-img"><img loading="lazy" src="Padmabati.jpeg"></div>
           <div class="mentor-txt">
             <h6>Ms Padmabati Narzary</h6>
             <p>Social Work Graduate and Livelihood Advocate. A member of the Bodo Tribe from Bijni, Chirang District, Assam, I hold a post-graduation in Social Work with a focus on Livelihood and Social Entrepreneurship, TISS-Guwahati. Contributing to livelihood, health, and nutrition initiatives in the Indo-Bhutan Border region, I am passionate about sustainable social business and continuous learning for a positive impact in the social sector.</p>
@@ -186,7 +186,7 @@
           </div>
         </div>
         <div class="mentors">
-          <div class="mentor-img"><img src="moni.jpeg"></div>
+          <div class="mentor-img"><img loading="lazy" src="moni.jpeg"></div>
           <div class="mentor-txt">
             <h6>Miss Moni kumari</h6>
             <p>Agronomist from Bihar working for Sustainable projects in Uttrakhand, with education background in Agriculture. A dedicated and versatile professional with over 3 years of experience in the agriculture and rural development sector. Proficient in project management, field research, community engagement, and technical interventions in agriculture. Skilled in leading initiatives aimed at improving farming practices and enhancing livelihoods. Demonstrates a strong commitment to sustainable development, education, and grassroots leadership.</p>
@@ -199,7 +199,7 @@
           </div>
         </div>
         <div class="mentors">
-          <div class="mentor-img"><img src="mentor1.jpg"></div>
+          <div class="mentor-img"><img loading="lazy" src="mentor1.jpg"></div>
           <div class="mentor-txt">
             <h6>Mr. Gautam Khattar</h6>
             <p>Mr. Gautam Khattar is a renowned social media influencer and the Founder of Stantan Mahasang. He inspires and motivates people through his unique storytelling and impactful content. His organization focuses on raising awareness about religious literature and spiritual growth, making him a significant figure in societal and spiritual enlightenment.</p>
@@ -214,6 +214,244 @@
       </div>
     </div>
   </section>
+
+<section class="section-team">
+  <h2>Our Team</h2>
+  <p>Meet the dedicated individuals behind HimVillageePrahari, who work tirelessly to protect the Himalayas and empower local communities.</p>
+
+  <div class="team-cards">
+    <div class="team-member">
+      <div class="team-img">
+        <img loading="lazy" src="gautam.jpeg" alt="Team Member 1">
+      </div>
+      <div class="team-info">
+        <h6>Team Member 1</h6>
+        <p>Role: Founder & CEO</p>
+        <p>Biography or brief description of the team member's role, experience, and contributions.</p>
+      </div>
+    </div>
+
+    <div class="team-member">
+      <div class="team-img">
+        <img loading="lazy" src="team2.jpg" alt="Team Member 2">
+      </div>
+      <div class="team-info">
+        <h6>Team Member 2</h6>
+        <p>Role: Project Manager</p>
+        <p>Biography or brief description of the team member's role, experience, and contributions.</p>
+      </div>
+    </div>
+
+    <!-- Add more team members as needed -->
+  </div>
+</section>
+
+
+  <section class="section7">
+
+    <h2>Our Gallery</h2>
+    <p>Explore the beauty of the Himalayas and the impact of our initiatives through our gallery of images and videos.</p>
+
+    <section class="photo-gallery">
+        <div class="gallery">
+            <div class="gallery-item">
+                <div class="hexagon">
+                    <img loading="lazy" src="gallery/g1.JPG" alt="Image 1">
+                </div>
+            </div>
+            <div class="gallery-item">
+                <div class="hexagon">
+                    <img loading="lazy" src="gallery/g2.jpg" alt="Image 2">
+                </div>
+            </div>
+            <div class="gallery-item">
+                <div class="hexagon">
+                    <img loading="lazy" src="gallery/g3.jpg" alt="Image 3">
+                </div>
+            </div>
+            <div class="gallery-item">
+                <div class="hexagon">
+                    <img loading="lazy" src="gallery/g4.jpg" alt="Image 4">
+                </div>
+            </div>
+            <div class="gallery-item">
+                <div class="hexagon">
+                    <img loading="lazy" src="gallery/g5.jpg" alt="Image 4">
+                </div>
+            </div>
+            <div class="gallery-item">
+                <div class="hexagon">
+                    <img loading="lazy" src="gallery/g6.jpg" alt="Image 4">
+                </div>
+            </div>
+            <div class="gallery-item">
+                <div class="hexagon">
+                    <img loading="lazy" src="gallery/g7.jpg" alt="Image 4">
+                </div>
+            </div>
+            <div class="gallery-item">
+                <div class="hexagon">
+                    <img loading="lazy" src="gallery/g8.jpg" alt="Image 4">
+                </div>
+            </div>
+            <div class="gallery-item">
+                <div class="hexagon">
+                    <img loading="lazy" src="gallery/g9.jpg" alt="Image 4">
+                </div>
+            </div>
+            <div class="gallery-item">
+                <div class="hexagon">
+                    <img loading="lazy" src="gallery/g10.jpg" alt="Image 4">
+                </div>
+            </div>
+            <div class="gallery-item">
+                <div class="hexagon">
+                    <img loading="lazy" src="gallery/g11.jpg" alt="Image 4">
+                </div>
+            </div>
+            <div class="gallery-item">
+                <div class="hexagon">
+                    <img loading="lazy" src="gallery/g12.jpg" alt="Image 4">
+                </div>
+            </div>
+            <div class="gallery-item">
+                <div class="hexagon">
+                    <img loading="lazy" src="gallery/g13.jpg" alt="Image 4">
+                </div>
+            </div>
+            <div class="gallery-item">
+                <div class="hexagon">
+                    <img loading="lazy" src="gallery/g14.jpg" alt="Image 4">
+                </div>
+            </div>
+            <div class="gallery-item">
+                <div class="hexagon">
+                    <img loading="lazy" src="gallery/g15.jpg" alt="Image 4">
+                </div>
+            </div>
+            <div class="gallery-item">
+                <div class="hexagon">
+                    <img loading="lazy" src="gallery/g16.jpg" alt="Image 16">
+                </div>
+            </div>
+        </div>
+    </section>
+
+
+  </section>
+
+  <section class="section8">
+    <div>    
+      <img loading="lazy" src="Human Hand Tree for Culture Diversity Concept Stock Vector - Illustration of love, hands_ 119811352.jpg" alt="Image 1">
+    </div>
+    <div>
+      <h3>Are You A Volunteer Ready?</h3>
+      <p>Join us in our mission to protect the Himalayas and empower local communities. Together, we can make a difference.</p>
+      <button class="volunteer-btn">Join Us</button>
+    </div>
+  </section>
+
+  <section class="section9">
+    <h2>Our Volunteers</h2>
+    <p>Our volunteers are the heart and soul of our organization, dedicating their time, skills, and passion to protect the Himalayas and uplift local communities. Meet some of the incredible individuals who are making a difference through their commitment and hard work.</p>
+    <div class="volunteers">
+        <div class="volunteer">
+            <div class="volunteer-img"><img loading="lazy" src="volunteer1.jpg"></div>
+            <div class="volunteer-txt">
+                <h6>Mr. Ravi Kumar</h6>
+            </div>
+        </div>
+        <div class="volunteer">
+            <div class="volunteer-img"><img loading="lazy" src="volunteer2.jpg"></div>
+            <div class="volunteer-txt">
+                <h6>Ms. Priya Singh</h6>
+            </div>
+        </div>
+        <div class="volunteer">
+            <div class="volunteer-img"><img loading="lazy" src="volunteer3.jpg"></div>
+            <div class="volunteer-txt">
+                <h6>Mr. Anil Sharma</h6>
+            </div>
+        </div>
+        <div class="volunteer">
+            <div class="volunteer-img"><img loading="lazy" src="volunteer4.jpg"></div>
+            <div class="volunteer-txt">
+                <h6>Ms. Neha Gupta</h6>
+            </div>
+        </div>
+                <div class="volunteer">
+            <div class="volunteer-img"><img loading="lazy" src="volunteer4.jpg"></div>
+            <div class="volunteer-txt">
+                <h6>Ms. Neha Gupta</h6>
+            </div>
+        </div>
+                <div class="volunteer">
+            <div class="volunteer-img"><img loading="lazy" src="gautam.jpeg"></div>
+            <div class="volunteer-txt">
+                <h6>Ms. Neha Gupta</h6>
+            </div>
+        </div>
+                <div class="volunteer">
+            <div class="volunteer-img"><img loading="lazy" src="volunteer4.jpg"></div>
+            <div class="volunteer-txt">
+                <h6>Ms. Neha Gupta</h6>
+            </div>
+        </div>
+                <div class="volunteer">
+            <div class="volunteer-img"><img loading="lazy" src="volunteer4.jpg"></div>
+            <div class="volunteer-txt">
+                <h6>Ms. Neha Gupta</h6>
+            </div>
+        </div>
+    </div>
+  </section>
+
+<section class="section10">
+    <h3>Contact Us</h3>
+    <p>Get in touch with us to learn more about our initiatives, volunteer opportunities, and how you can support our mission.</p>
+    
+    <div class="contact-info">
+        <div class="address">
+            <h3>Our Address</h3>
+            <p>Him Village ePrahari 123 Himalayan Road, Haridwar, Uttarakhand, India <br>Email: contact@himvillageeprahari.org <br> Phone: +91 98765 43210</p>
+        </div>
+        <div class="map">
+            <h3>Find Us Here</h3>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3430.948853215907!2d78.17468371513244!3d29.945691581915454!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x39092915619b64e7%3A0x4d9e4b2e7fa99d1c!2sHaridwar%2C%20Uttarakhand%2C%20India!5e0!3m2!1sen!2sus!4v1635403298141!5m2!1sen!2sus" width="100%" height="200" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+        </div>
+    </div>
+    
+    <div class="contact-form">
+        <form action="submit.php" method="POST">
+            <div class="form-group form-group-half">
+                <label for="name">Name</label>
+                <input type="text" id="name" name="name" required>  
+            </div>
+            <div class="form-group form-group-half">
+                <label for="email">Email</label>
+                <input type="email" id="email" name="email" required>
+            </div>
+            <div class="form-group">
+                <label for="message">Message</label>
+                <br>
+                <textarea id="message" name="message" required></textarea>
+            </div>
+            <button type="submit" class="submit-btn">Submit</button>
+        </form>
+    </div>
+</section>
+
+<footer class="footer">
+  <div class="social-media-icons">
+    <a href="https://www.linkedin.com/company/him-village-eprahari/posts/?feedView=all" class="social-icon" target="_blank"><i class="fab fa-linkedin"></i></a>
+    <a href="https://www.instagram.com/yourprofile" class="social-icon" target="_blank"><i class="fab fa-instagram"></i></a>
+  </div>
+  <div class="footer-bottom">
+    <p>&copy; 2024 Him Village ePrahari. All rights reserved.</p>
+    <p>Designed and developed by <a href="https://www.linkedin.com/in/a-m-sanjeev/" target="_blank">A M Sanjeev</a></p>
+  </div>
+</footer>
+
 
 
 </body>
