--- a/index.html
+++ b/index.html
@@ -329,7 +329,7 @@
                 <img loading="lazy" src="Sushant.jpeg" alt="Team Member 2">
               </div>
               <div class="team-info">
-                <h6>Mr. Sushant Singh</h6>
+                <h6>Mr. Sushant Kumar</h6>
                 <p><strong>Co-Founder & Social Work Professional </strong></p>
                 <p>Sushant Kumar is a dedicated social worker and youth advocate, empowering over 5,000 young people through STEP-AHEAD INDIA. As a Gandhi Fellow (2022-2024), he collaborated with the Jharkhand government on key initiatives like FLN, Physical Literacy, and Digital Literacy, impacting 300+ students across four schools. Currently, as Co-Founder of Him Village Eprahari Foundation, Sushant leads sustainable development efforts in rural communities.</p>
               </div>
